--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+asi
+asi2/models
+asi2/data
